--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,21 @@ a{
 .paragraph{
     font-size: 15px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .card{
     background-color: black;
-    width:calc(100% / 3 - 30px);
+    width:calc(100% / 3 - 10px);
     height: 100px;
-    margin: 50px 15px 0;
+    margin-bottom: 50px;
     float: left;
+}
+
+.card:nth-child(2){
+    margin: 0 15px;
+}
+
+.card:nth-child(5){
+    margin: 0 15px;
 }
